--- a/nats-box.yaml
+++ b/nats-box.yaml
@@ -2,7 +2,7 @@ package:
   name: nats-box
   version: 0.16.0
   epoch: 4
-  description: A lightweight container with NATS utilities.
+  description: NATS utilities toolbox.
   dependencies:
     runtime:
       - bash
