Try CAP_NET_ADMIN
Add tee to debug getcap test failure

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/python-3.12.yaml
+++ b/python-3.12.yaml
@@ -17,7 +17,7 @@ package:
 
 capabilities:
   add:
-    - CAP_SYS_ADMIN
+    - CAP_NET_ADMIN
 
 environment:
   contents:
@@ -243,7 +243,8 @@ subpackages:
             stat "/usr/bin/${{vars.python}}"
         - name: Test file capabilities
           runs: |
-            getcap /usr/bin/${{vars.python}} | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
+            # TODO(pnasrat): remove tee for debugging
+            getcap /usr/bin/${{vars.python}} | tee | cut -d ' ' -f2 | grep -q -E '^cap_net_bind_service=eip$'
 
   - name: "${{package.name}}-tk"
     dependencies:
