addressed batuhan comments
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -23,8 +23,6 @@ pipeline:
       mkdir -p ${{targets.destdir}}/usr/local/bin
       cp -r ${{targets.destdir}}/usr/bin/nats-server-config-reloader ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
       chmod 755 ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
-      mkdir -p ${{targets.destdir}}/etc/ssl/certs
-      cp /etc/ssl/certs/ca-certificates.crt ${{targets.destdir}}/etc/ssl/certs/
       cp cicd/assets/entrypoint.sh ${{targets.destdir}}/entrypoint.sh
       chmod +x ${{targets.destdir}}/entrypoint.sh
 
@@ -32,10 +30,11 @@ pipeline:
 
 subpackages:
   - name: ${{package.name}}-compat
+    description: "Compat package for ${{package.name}}"
     pipeline:
       - runs: |
-          mkdir -p ${{targets.contextdir}}/usr/local/bin
           ln -sf /usr/local/bin/nats-server-config-reloader ${{targets.contextdir}}/nats-server-config-reloader
+          ln -sf /usr/local/bin/nats-server-config-reloader /usr/bin/nats-server-config-reloader
     test:
       environment:
         contents:
@@ -44,7 +43,7 @@ subpackages:
       pipeline:
         - runs: |
             stat /nats-server-config-reloader
-            /nats-server-config-reloader --version
+            /usr/bin/nats-server-config-reloader --help
             /usr/local/bin/nats-server-config-reloader --help
 
 update:
