--- a/glibc.yaml
+++ b/glibc.yaml
@@ -1,7 +1,7 @@
 package:
   name: glibc
   version: 2.40
-  epoch: 21
+  epoch: 22
   description: "the GNU C library"
   copyright:
     - license: LGPL-2.1-or-later
@@ -29,8 +29,7 @@ package:
         - /usr/lib
         - /usr/lib64
       script: |
-        #!/bin/busybox sh
-        /usr/bin/ldconfig
+        #!/usr/bin/ldconfig
 
 environment:
   contents:
