--- a/python-3.12.yaml
+++ b/python-3.12.yaml
@@ -241,6 +241,7 @@ subpackages:
       pipeline:
         - runs: |
             stat "/usr/bin/${{vars.python}}"
+            getcap -v "/usr/bin/${{vars.python}}"
         - name: Test file capabilities
           runs: |
             # TODO(pnasrat): remove tee for debugging
