chore(ingress-nginx-controller-1.12.yaml): set -e with symlink tests
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/ingress-nginx-controller-1.12.yaml
+++ b/ingress-nginx-controller-1.12.yaml
@@ -548,6 +548,7 @@ subpackages:
             packages: ${{subpkg.name}}
         - name: Test symlinks
           runs: |
+            set -e
             test -f $(readlink -f /opt/bitnami/common/bin/mmdblookup)
             test -d $(readlink -f /opt/bitnami/common/lib)
             test -d $(readlink -f /opt/bitnami/common/include)
