add additional tests for syft
Signed-off-by: Rakshit Gondwal <rakshit.gondwal@chainguard.dev>

--- a/syft.yaml
+++ b/syft.yaml
@@ -1,7 +1,7 @@
 package:
   name: syft
   version: "1.20.0"
-  epoch: 0
+  epoch: 1
   description: CLI tool and library for generating a Software Bill of Materials from container images and filesystems
   copyright:
     - license: Apache-2.0
@@ -32,7 +32,23 @@ update:
     strip-prefix: v
 
 test:
+  environment:
+    contents:
+      packages:
+        - jq
   pipeline:
     - runs: |
         syft --version
         syft --help
+
+        syft cgr.dev/chainguard/static:latest -o syft-json > sbom-default.json
+        jq . sbom-default.json
+
+        syft cgr.dev/chainguard/static:latest --scope all-layers -o syft-json > sbom-all-layers.json
+        jq . sbom-all-layers.json
+
+        syft cgr.dev/chainguard/static:latest -o spdx-json > sbom-spdx.json
+        jq . sbom-spdx.json
+
+        syft cgr.dev/chainguard/static:latest -o cyclonedx-json > sbom-cdx.json
+        jq . sbom-cdx.json
