ran postunpack.sh
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -99,6 +99,12 @@ subpackages:
           chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/bitnami/influxdb
 
           mkdir -p ${{targets.subpkgdir}}/docker-entrypoint-initdb.d/
+
+          # Use package path while unpacking
+          find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.subpkgdir}}/opt/bitnami#g' -i {} \;
+            ${{targets.subpkgdir}}/opt/bitnami/scripts/influxdb/postunpack.sh || true
+          # Restore path
+          find ${{targets.subpkgdir}}/opt/bitnami -type f -exec sed 's#${{targets.subpkgdir}}##g' -i {} \;
     test:
       environment:
         environment:
