Improved tests, added validations
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -39,8 +39,9 @@ test:
       packages:
         - nats-server
         - nats
-        - openssl
         - util-linux-misc
+        - mkcert
+        - openssl
   pipeline:
     - name: "Version test"
       runs: |
@@ -51,19 +52,18 @@ test:
         nats sub client1 > /dev/null & sleep 2 & nats sub client2 > /dev/null & sleep 2
         nats-top -s localhost -b -u -o nats-output-${{package.version}}.txt
         cat nats-output-${{package.version}}.txt
-    - name: test connection limit (-n) abd sorting options (-sort)
+    - name: test connection limit (-n) and sorting options (-sort)
       runs: |
-        nats-top -n 2 -sort uptime -o nats-output-${{package.version}}.txt
-        grep "Connections Polled:" nats-output-${{package.version}}.txt
-        tail -n 5 nats-output-${{package.version}}.txt
-    - name: test sorting options (-sort)
-      runs: |
-        nats-top -sort uptime -o nats-output-${{package.version}}.txt
-        tail -n 5 nats-output-${{package.version}}.txt
+        nats-top -n 1 -sort uptime -o nats-output-${{package.version}}.txt
+        grep "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
     - name: test output with delimiter (-l)
       runs: |
         nats-top -o nats-output-${{package.version}}.csv -l ","
-        head -n 5 nats-output-${{package.version}}.csv
+        if [ ! -s "nats-output-${{package.version}}.csv" ]; then
+          echo "Error: CSV File is empty!"
+          exit 1
+        fi
+        head -n 5 "nats-output-${{package.version}}.csv"
     - name: test setting refresh delay (-d) and refresh count (-r)
       runs: |
         export TERM=xterm && timeout 3 script -q -c "nats-top -d 1 -r 3" /dev/null
@@ -71,19 +71,15 @@ test:
       runs: |
         mkdir -p /tmp/certs
         cd /tmp/certs
-        # Generate CA certificate
-        openssl genrsa -out ca-key.pem 2048
-        openssl req -new -x509 -key ca-key.pem -out ca-cert.pem -days 365 -subj "/CN=NATS-CA"
-        # Generate Server Certificate
-        openssl genrsa -out server-key.pem 2048
-        openssl req -new -key server-key.pem -out server-csr.pem -subj "/CN=localhost"
-        openssl x509 -req -in server-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out server-cert.pem -days 365 -extfile <(printf "subjectAltName=DNS:localhost,IP:127.0.0.1")
-        # Generate Client Certificate
-        openssl genrsa -out client-key.pem 2048
-        openssl req -new -key client-key.pem -out client-csr.pem -subj "/CN=NATS-Client"
-        openssl x509 -req -in client-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out client-cert.pem -days 365 -extfile <(printf "subjectAltName=DNS:localhost,IP:127.0.0.1")
+        # Using mkcert to generate certs
+        mkcert -install
+        mkcert -cert-file server-cert.pem -key-file server-key.pem localhost 127.0.0.1
+        mkcert -client -cert-file client-cert.pem -key-file client-key.pem localhost 127.0.0.1
+        cp "$(mkcert -CAROOT)/rootCA.pem" ca-cert.pem
         cd ../..
+        # Killing previous nats-server process
         pkill nats-server & sleep 2
+        # Certs validation before injecting them into NATS
         openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/server-cert.pem
         openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/client-cert.pem
         # Setting up NATS server
