--- a/oxipng.yaml
+++ b/oxipng.yaml
@@ -6,10 +6,6 @@ package:
   copyright:
     - license: MIT
 
-environment:
-  environment:
-    RUSTFLAGS: "-C linker=/usr/local/bin/gcc"
-
 pipeline:
   - uses: git-checkout
     with:
@@ -20,6 +16,7 @@ pipeline:
   - uses: cargo/build
     with:
       output: ${{package.name}}
+      rustflags: "-C linker=/usr/local/bin/gcc"
 
   - uses: strip
 
