--- a/oxipng.yaml
+++ b/oxipng.yaml
@@ -16,6 +16,7 @@ pipeline:
   - uses: cargo/build
     with:
       output: ${{package.name}}
+      rustflags: "-C linker=/usr/local/bin/gcc"
 
   - uses: strip
 
