--- a/python-3.12.yaml
+++ b/python-3.12.yaml
@@ -17,8 +17,7 @@ package:
 
 capabilities:
   add:
-    - CAP_NET_ADMIN
-    - CAP_SYS_ADMIN
+    - CAP_NET_BIND_SERVICE
     - CAP_SETFCAP
 
 environment:
