chore(selenium): Bump to Java 21
Upstream has moved on, we should too

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/selenium.yaml
+++ b/selenium.yaml
@@ -1,13 +1,16 @@
 package:
   name: selenium
   version: "4.28.0"
-  epoch: 1
+  epoch: 2
   description: A browser automation framework and ecosystem.
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - openjdk-17-default-jvm
+      - openjdk-${{vars.java-version}}-default-jvm
+
+vars:
+  java-version: '21'
 
 environment:
   contents:
@@ -26,13 +29,11 @@ environment:
       - libbz2-1
       - liblz4-1
       - libzstd1
-      - openjdk-17-default-jdk
+      - openjdk-${{vars.java-version}}-default-jdk
       - python3
       - ruby-3.3
       - tzdata
       - wolfi-baselayout
-  environment:
-    JAVA_HOME: /usr/lib/jvm/java-17-openjdk
 
 pipeline:
   - uses: git-checkout
@@ -61,7 +62,7 @@ subpackages:
     description: The Selenium Server is needed in order to run Remote Selenium WebDriver (Grid).
     dependencies:
       runtime:
-        - openjdk-17-default-jvm
+        - openjdk-${{vars.java-version}}-default-jvm
     pipeline:
       - runs: |
           bazel build //java/src/org/openqa/selenium/grid:executable-grid
@@ -71,11 +72,6 @@ subpackages:
           ln -sf /usr/share/java/${{package.name}}/bin/selenium-server-standalone "${{targets.subpkgdir}}"/usr/bin/selenium-server-standalone
       - uses: strip
     test:
-      environment:
-        contents:
-          packages:
-            - wolfi-base
-            - openjdk-17-default-jvm
       pipeline:
         - runs: |
             selenium-server-standalone info
@@ -86,7 +82,7 @@ subpackages:
     description: The Selenium Server is needed in order to run Remote Selenium WebDriver (Grid).
     dependencies:
       runtime:
-        - openjdk-17-default-jvm
+        - openjdk-${{vars.java-version}}-default-jvm
     pipeline:
       - runs: |
           bazel build //java/src/org/openqa/selenium/grid:selenium_server_deploy.jar
@@ -96,11 +92,6 @@ subpackages:
           ln -sf /usr/share/java/${{package.name}}/bin/selenium_server_deploy.jar "${{targets.subpkgdir}}"/usr/bin/selenium-server
       - uses: strip
     test:
-      environment:
-        contents:
-          packages:
-            - wolfi-base
-            - openjdk-17-default-jvm
       pipeline:
         - runs: |
             java -jar /usr/bin/selenium-server
@@ -117,10 +108,6 @@ subpackages:
       - uses: strip
 
 test:
-  environment:
-    contents:
-      packages:
-        - openjdk-17-default-jvm
   pipeline:
     - runs: |
         selenium info
