--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -5,7 +5,7 @@ package:
   # 'package format error' when trying to install the package. The workaround is
   # to replace '-' with '.', then mangling the version to replace back.
   version: "4.29.0.20250303"
-  epoch: 0
+  epoch: 1
   description: Provides a simple way to run Selenium Grid with Chrome, Firefox, and Edge using Docker, making it easier to perform browser automation
   copyright:
     - license: Apache-2.0
@@ -20,6 +20,9 @@ package:
       - coreutils
       - gettext
 
+vars:
+  java-version: '21'
+
 environment:
   contents:
     packages:
@@ -33,12 +36,11 @@ environment:
       - git
       - gnupg
       - jq
-      - openjdk-17-default-jdk
+      - openjdk-${{vars.java-version}}-default-jdk
       - openssl
       - x11vnc
       - yq
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-17-openjdk
     TC: UTC
     SEL_USER: seluser
     SEL_PASSWD: secret
