added symlink to influx needed by /opt/bitnami/scripts/libos.sh: line 348
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -89,6 +89,7 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin
           ln -sf /usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin/influxd
+          ln -sf /usr/bin/influx ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin/influx
 
           # copy etc to influxdb/etc.default
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default
