--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -100,17 +100,18 @@ subpackages:
               echo "${SEL_PASSWD}" > ${{targets.contextdir}}/opt/selenium/initialPasswd
           # TODO: Implement malware scan for jars retrieved by coursier
           - runs: |
-              # Retrieve OpenTelemetry/GRPC Java versions
-              export OPENTELEMETRY_VERSION=$(curl "https://api.github.com/repos/open-telemetry/opentelemetry-java/releases/latest" | jq -r ".tag_name" | sed 's/v//')
-              export GRPC_VERSION=$(curl "https://api.github.com/repos/grpc/grpc-java/releases/latest" | jq -r ".tag_name" | sed 's/v//')
+              # Retrieve OpenTelemetry/GRPC/Netty Java versions
+              # Do not change these. Docker Selenium is sensitive to the versions used
+              OPENTELEMETRY_VERSION=$(cat ./Dockerfile | grep "^ARG OPENTELEMETRY_VERSION" | sed "s/.*=//")
+              GRPC_VERSION=$(cat ./Dockerfile | grep "^ARG GRPC_VERSION" | sed "s/.*=//")
+              NETTY_VERSION=$(cat ./Dockerfile | grep "^ARG NETTY_VERSION" | sed "s/.*=//")
 
               mkdir -p ${{targets.contextdir}}/external_jars
               curl -sSLfO https://github.com/coursier/launchers/raw/master/coursier
               chmod +x coursier
-              # The netty-codec-http bump is for CVE-2024-29025
               ./coursier fetch --classpath --cache ${{targets.contextdir}}/external_jars \
                 io.opentelemetry:opentelemetry-exporter-otlp:${OPENTELEMETRY_VERSION} \
-                io.netty:netty-codec-http:4.1.118.Final \
+                io.netty:netty-codec-http:${NETTY_VERSION} \
                 io.grpc:grpc-netty:${GRPC_VERSION} > ${{targets.contextdir}}/external_jars/.classpath.txt
               chmod 665 ${{targets.contextdir}}/external_jars/.classpath.txt
               sed -i 's|${{targets.contextdir}}||g' ${{targets.contextdir}}/external_jars/.classpath.txt
