added findutils required by /opt/bitnami/scripts/libinfluxdb.sh: line 478
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -74,6 +74,7 @@ subpackages:
         - bash
         - coreutils
         - curl
+        - findutils
         - influxd
         - influx
         - grep
