--- a/mariadb-11.7.yaml
+++ b/mariadb-11.7.yaml
@@ -1,7 +1,7 @@
 package:
   name: mariadb-11.7
   version: "11.7.2"
-  epoch: 1
+  epoch: 2
   description: "The MariaDB open source relational database"
   copyright:
     - license: GPL-3.0-or-later
@@ -159,6 +159,11 @@ subpackages:
         - mariadb-dev=${{package.full-version}}
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: mariadb-11.7-dev
 
   - name: "${{package.name}}-doc"
     dependencies:
