--- a/samba.yaml
+++ b/samba.yaml
@@ -422,6 +422,7 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/samba/libauthkrb5-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libcli-cldap-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libcli-ldap-common-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
+          mv "${{targets.destdir}}"/usr/lib/samba/libcli-ldap-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libcli-nbt-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libcli-smb-common-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libcli-spoolss-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
@@ -450,6 +451,7 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/samba/libmsrpc3-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libndr-samba-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libndr-samba4-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
+          mv "${{targets.destdir}}"/usr/lib/samba/libnetif-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libnpa-tstream-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libsamba-cluster-support-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
           mv "${{targets.destdir}}"/usr/lib/samba/libsamba-modules-private-samba.so "${{targets.contextdir}}"/usr/lib/samba
