--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -46,16 +46,24 @@ test:
     - name: "Version test"
       runs: |
         nats-top --version 2>&1 | grep ${{package.version}}
-    - name: Test nats-top with minimal nats server and 2 clients
+    - name: Set up nats server and 2 client
       runs: |
         nats-server -p 4222 -m 8222 & sleep 2 &
         nats sub client1 > /dev/null & sleep 2 & nats sub client2 > /dev/null & sleep 2
-        nats-top -s localhost -b -u -o nats-output-${{package.version}}.txt
-        cat nats-output-${{package.version}}.txt
-    - name: test connection limit (-n) and sorting options (-sort)
+    - name: Test and validate nats-top (basic)
       runs: |
-        nats-top -n 1 -sort uptime -o nats-output-${{package.version}}.txt
-        grep "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        nats-top -s localhost -b -u -o nats-output-${{package.version}}.txt
+        grep -q "client1" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        grep -q "client2" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        grep -q "Connections Polled: 2" nats-output-${{package.version}}.txt >/dev/null 2>&1
+    - name: test connection limit (-n)
+      runs: |
+        nats-top -n 1 -o nats-output-${{package.version}}.txt
+        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
+    - name: test sorting options (-sort)
+      runs: |
+        nats-top -sort uptime -u -o nats-output-${{package.version}}.txt
+        grep -q client2 <(tail -1 nats-output-${{package.version}}.txt)
     - name: test output with delimiter (-l)
       runs: |
         nats-top -o nats-output-${{package.version}}.csv -l ","
@@ -86,6 +94,5 @@ test:
         nats-server -p 4223 -m 8223 --tls --tlscert ./tmp/certs/server-cert.pem --tlskey ./tmp/certs/server-key.pem --tlscacert ./tmp/certs/ca-cert.pem & sleep 2
         # Creating a NATS client and publishing sample message
         nats sub -s "localhost:4223" --tlscert ./tmp/certs/client-cert.pem --tlskey ./tmp/certs/client-key.pem --tlsca ./tmp/certs/ca-cert.pem "test.subject" > /dev/null & sleep 1
-        # Test NATS top in TLS mode
         nats-top -s localhost -m 8223 -cert ./tmp/certs/client-cert.pem -key ./tmp/certs/client-key.pem -cacert ./tmp/certs/ca-cert.pem -o nats-output-${{package.version}}.txt
-        cat nats-output-${{package.version}}.txt
+        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
