Fix delimmiter test for nats-top
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -42,6 +42,7 @@ test:
         - util-linux-misc
         - mkcert
         - openssl
+        - python3
   pipeline:
     - name: "Version test"
       runs: |
@@ -71,7 +72,10 @@ test:
           echo "Error: CSV File is empty!"
           exit 1
         fi
-        head -n 5 "nats-output-${{package.version}}.csv"
+        # Sanitize the input
+        sed -i '/^$/d' nats-output-${{package.version}}.csv
+        # Ensure at least one column for each rows
+        python -c "import csv; reader = csv.reader(open('nats-output-${{package.version}}.csv', 'r')); [print(row[0]) for row in reader]"
     - name: test setting refresh delay (-d) and refresh count (-r)
       runs: |
         export TERM=xterm && timeout 3 script -q -c "nats-top -d 1 -r 3" /dev/null
