fix(docker-selenium): Explicitly depend on matching version of Selenium
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -23,6 +23,19 @@ package:
 vars:
   java-version: '21'
 
+# Pin Selenium runtime dependencies to the same release as Selenium
+# This is intentional as we should not ship newer Docker Selenium
+# with an older Selenium release. Please update Selenium first
+var-transforms:
+  - from: ${{package.version}}
+    match: ^(\d+\.\d+.\d+)\.\d+$
+    replace: "$1"
+    to: selenium-version
+  - from: ${{package.version}}
+    match: ^(.+)\.(\d+)$
+    replace: $1-$2
+    to: mangled-package-version
+
 environment:
   contents:
     packages:
@@ -45,13 +58,6 @@ environment:
     SEL_USER: seluser
     SEL_PASSWD: secret
 
-# Transform melange version to replace last dot "." with "-".
-var-transforms:
-  - from: ${{package.version}}
-    match: ^(.+)\.(\d+)$
-    replace: $1-$2
-    to: mangled-package-version
-
 pipeline:
   - uses: git-checkout
     with:
@@ -70,12 +76,12 @@ subpackages:
         - bash
         - busybox
         - coreutils
-        - selenium-server-compat
+        - selenium-server-compat~${{vars.selenium-version}}
         - sudo-rs
         - supervisor
         - tzdata
         - ${{package.name}}-supervisor-config
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
         - pulseaudio-utils
         - pulseaudio
     pipeline:
@@ -160,7 +166,7 @@ subpackages:
   - name: ${{package.name}}-standalone
     dependencies:
       runtime:
-        - selenium-server-standalone
+        - selenium-server-standalone~${{vars.selenium-version}}
         - ${{package.name}}-base
         - ${{package.name}}-config
     pipeline:
@@ -213,7 +219,7 @@ subpackages:
       runtime:
         - ${{package.name}}-base
         - ${{package.name}}-config
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}/opt/bin
@@ -278,7 +284,7 @@ subpackages:
         - xvfb-run
         - ${{package.name}}-base
         - ${{package.name}}-config
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - working-directory: NodeBase
         pipeline:
@@ -450,7 +456,7 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}-base
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - working-directory: Distributor
         pipeline:
@@ -531,7 +537,7 @@ subpackages:
       runtime:
         - ${{package.name}}-base
         - ${{package.name}}-config
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - working-directory: Router
         pipeline:
@@ -571,7 +577,7 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}-base
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - working-directory: SessionQueue
         pipeline:
@@ -603,7 +609,7 @@ subpackages:
       runtime:
         - ${{package.name}}-base
         - ${{package.name}}-config
-        - selenium-server
+        - selenium-server~${{vars.selenium-version}}
     pipeline:
       - working-directory: Sessions
         pipeline:
