--- a/mariadb-connector-c.yaml
+++ b/mariadb-connector-c.yaml
@@ -1,7 +1,7 @@
 package:
   name: mariadb-connector-c
   version: "3.4.4"
-  epoch: 0
+  epoch: 1
   description: The MariaDB Native Client library (C driver)
   copyright:
     - license: LGPL-2.1-or-later
@@ -73,6 +73,9 @@ subpackages:
             mysql_config --version
             mysql_config --help
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: mariadb-connector-c-dev
 
 update:
   enabled: true
