Copy NGINX.CONF from bitnami/containers repo
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -2,7 +2,7 @@ package:
   name: nginx-mainline
   # Must also bump njs at the same time
   version: "1.27.4"
-  epoch: 1
+  epoch: 10
   description: HTTP and reverse proxy server (mainline version)
   copyright:
     - license: BSD-2-Clause
@@ -269,9 +269,8 @@ subpackages:
         - grep
         - openssl
         - glibc-locales
-        - nginx-package-config
-        - nginx-mod-http_geoip
-        - nginx-mod-stream_geoip
+        - render-template
+        - pcre
     pipeline:
       - uses: bitnami/compat
         with:
@@ -279,6 +278,7 @@ subpackages:
           version-path: ${{vars.major-minor-version}}/debian-12
       - name: Create dirs
         runs: |
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/common
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/sbin
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf
           mkdir -p ${{targets.contextdir}}/opt/bitnami/nginx/conf.default
@@ -296,15 +296,24 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/run/nginx
           mkdir -p ${{targets.contextdir}}/var/run
           touch ${{targets.contextdir}}/.rnd
-      - name: Copy contents | Set symlinks
+      - name: "Download and copy Bitnami config | set symlinks"
         runs: |
-          install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf
-          install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf.default
-          install -m644 -D nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf
-          install -m644 -D nginx.default.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf.default
+          mkdir -p "${{targets.contextdir}}/tmp/bitnami-nginx"
+          curl -SsLf "https://downloads.bitnami.com/files/stacksmith/nginx-1.27.4-4-linux-amd64-debian-12.tar.gz" \
+            -o ${{targets.contextdir}}/tmp/nginx.tar.gz
+          tar -xf ${{targets.contextdir}}/tmp/nginx.tar.gz -C ${{targets.contextdir}}/tmp/bitnami-nginx --strip-components=1
+          cp -R ${{targets.contextdir}}/tmp/bitnami-nginx/files/nginx/conf/. ${{targets.contextdir}}/opt/bitnami/nginx/conf/
+          cp -R ${{targets.contextdir}}/tmp/bitnami-nginx/files/nginx/conf/. ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/
+          cp ./bitnami-containers/bitnami/nginx/1.27/debian-12/rootfs/opt/bitnami/nginx/conf/nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf/nginx.conf
+          cp ./bitnami-containers/bitnami/nginx/1.27/debian-12/rootfs/opt/bitnami/nginx/conf/nginx.conf ${{targets.contextdir}}/opt/bitnami/nginx/conf.default/nginx.conf
+
+          cp -R ${{targets.contextdir}}/tmp/bitnami-nginx/files/common/. ${{targets.contextdir}}/opt/bitnami/common/
+          ln -sf /usr/bin/render-template ${{targets.contextdir}}/opt/bitnami/common/bin/
 
           ln -sf /usr/sbin/nginx ${{targets.contextdir}}/opt/bitnami/nginx/sbin/nginx
           ln -sf /usr/lib/nginx/modules ${{targets.contextdir}}/opt/bitnami/nginx/
+
+          rm -rf ${{targets.contextdir}}/tmp
       - name: Run postunpack.sh
         runs: |
           find ${{targets.contextdir}}/opt/bitnami -iname "*.sh" -exec sh -c '
