--- a/openssh.yaml
+++ b/openssh.yaml
@@ -1,7 +1,7 @@
 package:
   name: openssh
   version: "9.9_p2"
-  epoch: 2
+  epoch: 3
   description: "the OpenBSD SSH implementation"
   copyright:
     - license: ISC
@@ -197,8 +197,8 @@ subpackages:
             ssh-keygen -A -q -N ""
             sshd -T | grep -i 'Banner /does-not-exist'
 
-  - name: "openssh-pam-configuration"
-    description: "OpenSSH server pam config"
+  - name: "openssh-pam-config"
+    description: "OpenSSH server pam configuration"
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/etc/pam.d
