adding some more top level font tests, bump epoch to run tests and rebuild

--- a/font-noto.yaml
+++ b/font-noto.yaml
@@ -1,7 +1,7 @@
 package:
   name: font-noto
   version: "2025.03.01"
-  epoch: 0
+  epoch: 1
   description: Noto fonts
   dependencies:
     runtime:
@@ -214,3 +214,8 @@ update:
     strip-prefix: noto-monthly-release-
     use-tag: true
     tag-filter: noto-monthly-release-
+
+test:
+  pipeline:
+    - runs: |
+        apk -L ${{package.name}} | grep "\.ttf$" | xargs -i fc-scan {}
