--- a/mpdecimal.yaml
+++ b/mpdecimal.yaml
@@ -1,7 +1,7 @@
 package:
   name: mpdecimal
   version: 4.0.0
-  epoch: 4
+  epoch: 5
   description: "complete implementation of the general decimal arithmetic specification"
   copyright:
     - license: MIT
@@ -43,6 +43,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: mpdecimal-dev
 
   - name: mpdecimal-doc
     description: mpdecimal docs
