--- a/ruby3.2-sidekiq.yaml
+++ b/ruby3.2-sidekiq.yaml
@@ -10,7 +10,9 @@ package:
     runtime:
       - ruby${{vars.rubyMM}}-concurrent-ruby
       - ruby${{vars.rubyMM}}-connection_pool
-      - ruby${{vars.rubyMM}}-rack-2.2
+      - ruby${{vars.rubyMM}}-json
+      - ruby${{vars.rubyMM}}-logger
+      - ruby${{vars.rubyMM}}-rack
       - ruby${{vars.rubyMM}}-redis-client
       - ruby-${{vars.rubyMM}}
 
