ruby3.4-sidekiq: depend on latest rack package
Upstream no longer require 2.2.

--- a/ruby3.4-sidekiq.yaml
+++ b/ruby3.4-sidekiq.yaml
@@ -10,7 +10,7 @@ package:
     runtime:
       - ruby${{vars.rubyMM}}-concurrent-ruby
       - ruby${{vars.rubyMM}}-connection_pool
-      - ruby${{vars.rubyMM}}-rack-2.2
+      - ruby${{vars.rubyMM}}-rack
       - ruby${{vars.rubyMM}}-redis-client
       - ruby-${{vars.rubyMM}}
 
