--- a/hello-wolfi.yaml
+++ b/hello-wolfi.yaml
@@ -37,6 +37,9 @@ subpackages:
   - name: "hello-doc"
     pipeline:
       - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
