changed cp -pr to install -m755 and removed || true
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -94,7 +94,7 @@ subpackages:
 
           # copy etc to influxdb/etc.default
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default
-          cp -pr ${{targets.destdir}}/etc/* ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default/
+          install -m755 -Dt ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default/defaults/influxdb2 ${{targets.destdir}}/etc/defaults/influxdb2/config.yml
           chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/opt/bitnami/
 
           mkdir -p ${{targets.subpkgdir}}/bitnami/influxdb
@@ -104,7 +104,7 @@ subpackages:
 
           # Use package path while unpacking
           find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.subpkgdir}}/opt/bitnami#g' -i {} \;
-            ${{targets.subpkgdir}}/opt/bitnami/scripts/influxdb/postunpack.sh || true
+            ${{targets.subpkgdir}}/opt/bitnami/scripts/influxdb/postunpack.sh
           # Restore path
           find ${{targets.subpkgdir}}/opt/bitnami -type f -exec sed 's#${{targets.subpkgdir}}##g' -i {} \;
     test:
