Add in some pkgconf tests which are disabled

--- a/gcc-6.yaml
+++ b/gcc-6.yaml
@@ -329,6 +329,8 @@ test:
         gcov-6.5 --help
         gcov-dump-6.5 --help
         gcov-tool-6.5 --help
+    # Will fail https://github.com/wolfi-dev/os/issues/34009
+    # - uses: test/pkgconf
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
