--- a/kubeflow-katib.yaml
+++ b/kubeflow-katib.yaml
@@ -282,6 +282,8 @@ subpackages:
 
 test:
   pipeline:
+    # Will fail see https://github.com/wolfi-dev/os/issues/34320
+    # - uses: test/pkgconf
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
