--- a/metric-collector-for-apache-cassandra-4.1.yaml
+++ b/metric-collector-for-apache-cassandra-4.1.yaml
@@ -73,6 +73,8 @@ test:
         [ -d "/opt/metrics-collector/lib/collectd/lib/" ] || exit 1
         [ -d "/opt/metrics-collector/lib/collectd/etc/" ] || exit 1
         [ -d "/opt/metrics-collector/lib/collectd/usr/" ] || exit 1
+    # Will fail see https://github.com/wolfi-dev/os/issues/34356
+    # - uses: test/pkgconf
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
