--- a/mlflow.yaml
+++ b/mlflow.yaml
@@ -143,6 +143,8 @@ test:
         export PATH="/usr/share/mlflow/bin:${PATH}"
         python3 ./test-mlflow.py
         mlflow ui & sleep 5; curl -vsL localhost:5000
+    # Will fail see https://github.com/wolfi-dev/os/issues/34358
+    # - uses: test/pkgconf
     - uses: test/ldd-check
       with:
         packages: ${{package.name}}
