--- a/neon.yaml
+++ b/neon.yaml
@@ -103,6 +103,8 @@ update:
 
 test:
   pipeline:
+    # Will fail see https://github.com/wolfi-dev/os/issues/34360
+    # - uses: test/pkgconf
     - name: Test neon_local command
       runs: |
         neon_local --version
