fix: successful clickhouse build with compat package

--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -13,6 +13,12 @@ package:
       - clickhouse-25.2
       - bash # added for entrypoint script
       - coreutils
+      - findutils
+      - posix-libc-utils
+      - gawk
+      - procps
+      - zlib
+      - su-exec
 
 environment:
   contents:
@@ -41,32 +47,42 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/logs
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/tmp
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/licenses
+      mkdir -p ${{targets.contextdir}}/var/log/clickhouse-server
 
       mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
       mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
       
       ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
-      # ln -s /dev/stdout ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse.log
-      # ln -s /dev/stderr ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse_error.log 
+      # ln -s /proc/self/fd/1 ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse.log
+      # ln -s /proc/self/fd/2 ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse_error.log 
 
-      ln -s /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
-      ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
-      ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
+      install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
+      install -m755 /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
+      install -m755 /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
 
-      ln -s /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/keeper_config.xml
-      ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/users.xml
-      ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/config.xml
+      # install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/keeper_config.xml
+      # install -m755 /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/users.xml
+      # install -m755 /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/config.xml
+
+      mkdir -p ${{targets.contextdir}}/var/log/
 
       # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
       sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
       sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+      sed -i 's/am_i_root/# am_i_root/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/setup.sh
 
+      # The `--userspec`` flag belongs to GNU's chroot, whereas we are use BusyBox's. As a workaround, use `su-exec` instead.
+      sed -i 's|exec chroot --userspec="$userspec" /|exec chroot / su-exec "$userspec"|' ${{targets.contextdir}}/opt/bitnami/scripts/libos.sh
+      sed -i 's|chroot --userspec="$userspec" /|chroot / su-exec "$userspec"|' ${{targets.contextdir}}/opt/bitnami/scripts/libos.sh
 
       # Use package path while unpacking
       find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
       find . -iname "*.sh" -exec sed -i '/chown/c\continue'  -i {} \;
       find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
       find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
+
+      rm -f 
+
       ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
       # Restore path
       find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
@@ -89,6 +105,7 @@ pipeline:
 
       ln -s /usr/bin/clickhouse-library-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-library-bridge
       ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-odbc-bridge
-
+      ln -s /dev/stdout ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse.log
+      ln -s /dev/stderr ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse_error.log
 
 
