--- a/clickhouse-25.2.yaml
+++ b/clickhouse-25.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: clickhouse-25.2
   version: "25.2.1.3085"
-  epoch: 0
+  epoch: 1
   description: ClickHouse is the fastest and most resource efficient open-source database for real-time apps and analytics.
   copyright:
     - license: Apache-2.0
@@ -19,16 +19,14 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang-19
+      - clang~19
       - cmake
       - coreutils
       - findutils
       - git
       - grep
-      - llvm-libcxx-19
-      - llvm-libcxx-19-dev
-      - llvm-lld-19
-      - llvm-lld-19-dev
+      - libcxx1
+      - lld
       - nasm
       - ninja
       - perl
