--- a/mysql-connector-cpp.yaml
+++ b/mysql-connector-cpp.yaml
@@ -1,7 +1,7 @@
 package:
   name: mysql-connector-cpp
   version: "9.2.0"
-  epoch: 1
+  epoch: 2
   description: MySQL Connector/C++ is a MySQL database connector for C++
   copyright:
     - license: GPL-3.0-or-later
@@ -63,6 +63,11 @@ subpackages:
       replaces:
         - ${{package.name}}
     description: ${{package.name}} dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: mysql-connector-cpp-dev
 
 update:
   enabled: true
