--- a/nettle.yaml
+++ b/nettle.yaml
@@ -1,7 +1,7 @@
 package:
   name: nettle
   version: 3.10.1
-  epoch: 0
+  epoch: 1
   description: A low-level cryptographic library
   copyright:
     - license: LGPL-2.0-or-later
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: nettle-dev
 
   - name: nettle-utils
     pipeline:
