--- a/nfs-utils.yaml
+++ b/nfs-utils.yaml
@@ -1,7 +1,7 @@
 package:
   name: nfs-utils
   version: 2.8.2
-  epoch: 20
+  epoch: 21
   description: kernel-mode NFS
   copyright:
     - license: GPL-2.0-only
@@ -76,6 +76,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: nfs-utils-dev
 
   - name: ${{package.name}}-static
     description: "${{package.name}} static library"
