--- a/opencl.yaml
+++ b/opencl.yaml
@@ -1,7 +1,7 @@
 package:
   name: opencl
   version: 2024.10.24
-  epoch: 1
+  epoch: 3
   description: OpenCL SDK
   copyright:
     - license: Apache-2.0
@@ -43,6 +43,12 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: opencl-dev
+        - uses: test/tw/ldd-check
+          with:
+            packages: opencl-dev
 
 update:
   enabled: true
