--- a/openh264.yaml
+++ b/openh264.yaml
@@ -1,7 +1,7 @@
 package:
   name: openh264
   version: "2.6.0"
-  epoch: 0
+  epoch: 2
   description: OpenH264 is a codec library which supports H.264 encoding and decoding
   copyright:
     - license: BSD-2-Clause
@@ -39,6 +39,12 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openh264-dev
+        - uses: test/tw/ldd-check
+          with:
+            packages: openh264-dev
 
 update:
   enabled: true
