added a test for docbook which installs a bunch of xml

--- a/docbook-xml.yaml
+++ b/docbook-xml.yaml
@@ -371,3 +371,15 @@ update:
   manual: true # package contains multiple versions which are not easily updatable
   release-monitor:
     identifier: 227335
+
+test:
+  environment:
+    contents:
+      packages:
+        - libxml2-utils
+  pipeline:
+    - runs: |
+        # Check the obvious xml files installed
+        for i in $(apk info -L docbook-xml | grep "\.xsl$\|\.xml$"); do
+          xmllint --quiet --noout /$i
+        done
