fix: add additional needed packages

--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -5,14 +5,12 @@ package:
   description: Clickhouse 
   copyright:
     - license: Apache-2.0
-  resources:
-    cpu: 65
-    memory: 32Gi
   dependencies:
     runtime: 
       - clickhouse-25.2
       - bash # added for entrypoint script
       - coreutils
+      - net-tools
       - findutils
       - posix-libc-utils
       - gawk
@@ -53,16 +51,10 @@ pipeline:
       mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
       
       ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
-      # ln -s /proc/self/fd/1 ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse.log
-      # ln -s /proc/self/fd/2 ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse_error.log 
 
       install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
       install -m755 /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
       install -m755 /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
-
-      # install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/keeper_config.xml
-      # install -m755 /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/users.xml
-      # install -m755 /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/config.xml
 
       mkdir -p ${{targets.contextdir}}/var/log/
 
