fix: yam and add update

--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -2,37 +2,38 @@ package:
   name: clickhouse-25.2-bitnami-compat
   version: "25.2.1.3085"
   epoch: 0
-  description: Clickhouse 
+  description: Clickhouse
   copyright:
     - license: Apache-2.0
   dependencies:
-    runtime: 
-      - clickhouse-25.2
+    runtime:
       - bash # added for entrypoint script
+      - clickhouse-25.2
       - coreutils
-      - net-tools
       - findutils
-      - posix-libc-utils
       - gawk
+      - net-tools
+      - posix-libc-utils
       - procps
-      - zlib
       - su-exec
+      - zlib
 
 environment:
   contents:
     packages:
-      - clickhouse-25.2
-      - busybox
       - bash
-      - shadow
+      - busybox
+      - clickhouse-25.2
       - findutils
+      - shadow
       - xmlstarlet
 
 pipeline:
   - uses: bitnami/compat
-    with: 
+    with:
       image: clickhouse
       version-path: 25/debian-12
+
   - runs: |
       set -x
       mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/etc
@@ -49,7 +50,7 @@ pipeline:
 
       mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
       mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
-      
+
       ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
 
       install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
@@ -73,13 +74,13 @@ pipeline:
       find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
       find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
 
-      rm -f 
+      rm -f
 
       ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
       # Restore path
       find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
 
-      
+
       # Find all files in /usr/bin that are either named "clickhouse" or symlinks pointing to "clickhouse"
       for file in /usr/bin/*; do
           if [ -f "$file" ] && [ "$(basename "$file")" = "clickhouse" ]; then
@@ -100,4 +101,6 @@ pipeline:
       ln -s /dev/stdout ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse.log
       ln -s /dev/stderr ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse_error.log
 
-
+update:
+  enabled: false
+  exclude-reason: repository is a monorepo we don't have fidelity into the specific package updates
