--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -47,23 +47,28 @@ test:
     - name: "Version test"
       runs: |
         nats-top --version 2>&1 | grep ${{package.version}}
-    - name: Set up nats server and 2 client
+    - name: Set up NATS server
       runs: |
         nats-server -p 4222 -m 8222 & sleep 2 &
-        nats sub client1 > /dev/null & sleep 2 & nats sub client2 > /dev/null & sleep 2
+    - name: Set up NATS subscribers
+      runs: |
+        nats sub -s "localhost:4222" client2 > /dev/null &
+        sleep 3
+        nats sub -s "localhost:4222" client1 > /dev/null &
+        sleep 1
     - name: Test and validate nats-top (basic)
       runs: |
         nats-top -s localhost -b -u -o nats-output-${{package.version}}.txt
-        grep -q "client1" nats-output-${{package.version}}.txt >/dev/null 2>&1
-        grep -q "client2" nats-output-${{package.version}}.txt >/dev/null 2>&1
-        grep -q "Connections Polled: 2" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        grep -q "client1" nats-output-${{package.version}}.txt
+        grep -q "client2" nats-output-${{package.version}}.txt 
+        grep -q "Connections Polled: 2" nats-output-${{package.version}}.txt
     - name: test connection limit (-n)
       runs: |
         nats-top -n 1 -o nats-output-${{package.version}}.txt
-        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt
     - name: test sorting options (-sort)
       runs: |
-        nats-top -sort uptime -u -o nats-output-${{package.version}}.txt
+        nats-top -sort uptime -u -o nats-output-${{package.version}}.txt & sleep 1
         grep -q client2 <(tail -1 nats-output-${{package.version}}.txt)
     - name: test output with delimiter (-l)
       runs: |
@@ -78,25 +83,30 @@ test:
         python -c "import csv; reader = csv.reader(open('nats-output-${{package.version}}.csv', 'r')); [print(row[0]) for row in reader]"
     - name: test setting refresh delay (-d) and refresh count (-r)
       runs: |
-        export TERM=xterm && timeout 3 script -q -c "nats-top -d 1 -r 3" /dev/null
-    - name: Test Nats-top in TLS mode
+        export TERM=xterm
+        script --quiet --return --command "timeout 3 nats-top -d 1 -r 3"
+    - name: Generate certs for nats-top in TLS mode
       runs: |
-        mkdir -p /tmp/certs
-        cd /tmp/certs
+        mkdir -p certs && cd certs
         # Using mkcert to generate certs
         mkcert -install
         mkcert -cert-file server-cert.pem -key-file server-key.pem localhost 127.0.0.1
         mkcert -client -cert-file client-cert.pem -key-file client-key.pem localhost 127.0.0.1
         cp "$(mkcert -CAROOT)/rootCA.pem" ca-cert.pem
-        cd ../..
-        # Killing previous nats-server process
-        pkill nats-server & sleep 2
         # Certs validation before injecting them into NATS
-        openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/server-cert.pem
-        openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/client-cert.pem
-        # Setting up NATS server
-        nats-server -p 4223 -m 8223 --tls --tlscert ./tmp/certs/server-cert.pem --tlskey ./tmp/certs/server-key.pem --tlscacert ./tmp/certs/ca-cert.pem & sleep 2
-        # Creating a NATS client and publishing sample message
-        nats sub -s "localhost:4223" --tlscert ./tmp/certs/client-cert.pem --tlskey ./tmp/certs/client-key.pem --tlsca ./tmp/certs/ca-cert.pem "test.subject" > /dev/null & sleep 1
-        nats-top -s localhost -m 8223 -cert ./tmp/certs/client-cert.pem -key ./tmp/certs/client-key.pem -cacert ./tmp/certs/ca-cert.pem -o nats-output-${{package.version}}.txt
-        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt >/dev/null 2>&1
+        openssl verify -CAfile ca-cert.pem server-cert.pem
+        openssl verify -CAfile ca-cert.pem client-cert.pem
+    - name: Set up NATS server in TLS mode
+      runs: |
+        pkill nats-server & sleep 2
+        nats-server -p 4223 --https_port 8223 --tlsverify --tlscert ./certs/server-cert.pem --tlskey ./certs/server-key.pem --tlscacert ./certs/ca-cert.pem &
+        sleep 2
+    - name: Set up one NATS subscriber in TLS mode
+      runs: |
+        nats sub -s "localhost:4223" --tlscert ./certs/client-cert.pem --tlskey ./certs/client-key.pem --tlsca ./certs/ca-cert.pem "test.subject" > /dev/null &
+        sleep 1
+    - name: Test NATS top in TLS mode
+      runs: |
+        nats-top -s "localhost" -ms 8223 -u -cert ./certs/client-cert.pem -key ./certs/client-key.pem -cacert ./certs/ca-cert.pem -o nats-output-${{package.version}}.txt
+        grep -q "test.subject" nats-output-${{package.version}}.txt
+        grep -q "Connections Polled: 1" nats-output-${{package.version}}.txt
