--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -51,8 +51,6 @@ pipeline:
       mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
       mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
 
-      ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
-
       install -m755 /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
       install -m755 /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
       install -m755 /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
@@ -60,9 +58,9 @@ pipeline:
       mkdir -p ${{targets.contextdir}}/var/log/
 
       # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
-      sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
-      sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
-      sed -i 's/am_i_root/# am_i_root/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/setup.sh
+      # sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
+      # sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+      # sed -i 's/am_i_root/# am_i_root/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/setup.sh
 
       # The `--userspec`` flag belongs to GNU's chroot, whereas we are use BusyBox's. As a workaround, use `su-exec` instead.
       sed -i 's|exec chroot --userspec="$userspec" /|exec chroot / su-exec "$userspec"|' ${{targets.contextdir}}/opt/bitnami/scripts/libos.sh
@@ -74,12 +72,9 @@ pipeline:
       find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
       find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
 
-      rm -f
-
       ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
       # Restore path
-      find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
-
+      # find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
 
       # Find all files in /usr/bin that are either named "clickhouse" or symlinks pointing to "clickhouse"
       for file in /usr/bin/*; do
