--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -95,6 +95,8 @@ pipeline:
       ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-odbc-bridge
       ln -s /dev/stdout ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse.log
       ln -s /dev/stderr ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse_error.log
+      mkdir -p ${{targets.contextdir}}/var/lib
+      ln -s /bitnami/clickhouse/data ${{targets.contextdir}}/var/lib/clickhouse
 
 update:
   enabled: false
