Fixed profile.sh issue
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-box.yaml
+++ b/nats-box.yaml
@@ -1,7 +1,7 @@
 package:
   name: nats-box
   version: 0.16.0
-  epoch: 4
+  epoch: 5
   description: NATS utilities toolbox.
   dependencies:
     runtime:
@@ -29,8 +29,8 @@ pipeline:
       expected-commit: b73821692fc596b210816de93c5011047298646b
 
   - runs: |
-      mkdir -p ${{targets.destdir}}/etc
-      mv profile.sh ${{targets.destdir}}/etc/profile.sh
+      mkdir -p ${{targets.destdir}}/etc/profile.d
+      mv profile.sh ${{targets.destdir}}/etc/profile.d
       mv entrypoint.sh ${{targets.destdir}}/entrypoint.sh
 
 update:
