fix: update symlink find path

--- a/clickhouse-25.2.yaml
+++ b/clickhouse-25.2.yaml
@@ -149,7 +149,7 @@ subpackages:
           find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
 
           # Find all files in /usr/bin that are either named "clickhouse" or symlinks pointing to "clickhouse"
-          for file in /usr/bin/*; do
+          for file in ${{targets.destdir}}/usr/bin/*; do
               if [ -f "$file" ] && [ "$(basename "$file")" = "clickhouse" ]; then
                   # Found a direct match for "clickhouse"
                   ln -sf /usr/bin/clickhouse ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse
