Try fpermissive just-in-case.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/selenium.yaml
+++ b/selenium.yaml
@@ -48,7 +48,7 @@ pipeline:
   - runs: |
       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/lib:/usr/lib
 
-      bazel build grid
+      bazel build --cxxopt="-fpermissive" grid
       mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/usr/share/java/${{package.name}}/bin
       install -Dm755 bazel-bin/java/src/org/openqa/selenium/grid/selenium "${{targets.destdir}}"/usr/share/java/${{package.name}}/bin/selenium
