clone submodule as well
URLparse mruby etc are submodule in thirdparty dir: https://github.com/nghttp2/nghttp2/tree/3fbebd97cdace84064fb19f975fcb547d87a01d6/third-party

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/nghttp2.yaml
+++ b/nghttp2.yaml
@@ -28,6 +28,7 @@ pipeline:
       repository: https://github.com/nghttp2/nghttp2.git
       tag: v${{package.version}}
       expected-commit: 319bf015de8fa38e21ac271ce2f7d61aa77d90cb
+      recurse-submodules: true
 
   - runs: autoreconf -vfi
 
