--- a/clickhouse-25.2.yaml
+++ b/clickhouse-25.2.yaml
@@ -233,9 +233,8 @@ test:
       with:
         start: sudo -u build clickhouse-server
         expected_output: |
-          eady for connections
-          tarting ClickHouse
-          tarting up
-          canning
+          Starting ClickHouse
+          starting up
+          Scanning
         post: |
           ./test-daemon.sh
