Add the ldd-check test to multiple packages

--- a/openlibm.yaml
+++ b/openlibm.yaml
@@ -2,7 +2,7 @@
 package:
   name: openlibm
   version: 0.8.5
-  epoch: 0
+  epoch: 2
   description: High quality system independent, portable, open source libm implementation
   copyright:
     - license: MIT AND BSD-2-Clause AND ISC AND LGPL-2.1-or-later
@@ -42,6 +42,12 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openlibm-dev
+        - uses: test/tw/ldd-check
+          with:
+            packages: openlibm-dev
 
 update:
   enabled: true
