--- a/openmpi.yaml
+++ b/openmpi.yaml
@@ -1,7 +1,7 @@
 package:
   name: openmpi
   version: "5.0.7"
-  epoch: 0
+  epoch: 1
   description: Message passing library for high-performance computing
   copyright:
     - license: BSD-3-Clause-Open-MPI AND mpich2
@@ -80,6 +80,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openmpi-dev
 
   - name: openmpi-doc
     description: openmpi manpages
