--- a/openrc.yaml
+++ b/openrc.yaml
@@ -2,7 +2,7 @@
 package:
   name: openrc
   version: "0.60.1"
-  epoch: 30
+  epoch: 31
   description: OpenRC is a dependency-based init system that works with the system provided init program.
   copyright:
     - license: BSD-2-Clause
@@ -115,6 +115,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openrc-dev
 
   - name: agetty-openrc
     description: "agetty program from util-linux (OpenRC init scripts)"
