--- a/pcre2.yaml
+++ b/pcre2.yaml
@@ -1,7 +1,7 @@
 package:
   name: pcre2
   version: "10.45"
-  epoch: 0
+  epoch: 1
   description: "perl-compatible regular expression library"
   copyright:
     - license: BSD-3-Clause
@@ -68,6 +68,9 @@ subpackages:
         - runs: |
             pcre2-config --version
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: pcre2-dev
 
   - name: "libpcre2-8-0"
     description: "pcre2 runtime library 8-bit"
