--- a/openjpeg.yaml
+++ b/openjpeg.yaml
@@ -1,7 +1,7 @@
 package:
   name: openjpeg
   version: 2.5.3
-  epoch: 0
+  epoch: 1
   description: "Open-source implementation of JPEG2000 image codec"
   copyright:
     - license: BSD-2-Clause
@@ -52,6 +52,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openjpeg-dev
 
   - name: openjpeg-tools
     pipeline:
