--- a/orc.yaml
+++ b/orc.yaml
@@ -1,7 +1,7 @@
 package:
   name: orc
   version: "0.4.41"
-  epoch: 1
+  epoch: 2
   description: Oil Run-time Compiler
   copyright:
     - license: BSD-3-Clause
@@ -47,6 +47,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: orc-dev
     description: ${{package.name}} dev
 
 update:
