--- a/pcsc-lite.yaml
+++ b/pcsc-lite.yaml
@@ -1,7 +1,7 @@
 package:
   name: pcsc-lite
   version: 2.3.1
-  epoch: 1
+  epoch: 2
   description: Middleware to access a smart card using SCard API (PC/SC)
   copyright:
     - license: GPL-3.0-or-later
@@ -51,6 +51,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: pcsc-lite-dev
 
 update:
   enabled: true
