superset: pin npm version to one which works

--- a/superset.yaml
+++ b/superset.yaml
@@ -29,7 +29,7 @@ environment:
       - mariadb-connector-c-dev
       - mariadb-dev
       - nodejs
-      - npm
+      - npm<11.2.0
       - nvm
       - openldap-dev
       - py${{vars.python-version}}-pip
