mariadb-11.7 - specify basedir in docker-entrypoint.sh
Post /bin usrmerge, /bin/mariadbd now exists because of the /bin symlink to /usr/bin, where mariadbd actually resides. The mariadb docker entrypoint startup scripts check for the existence of /bin/mariadbd, and guess that the installation root is / when it is actually /usr, causing a failure to find some startup SQL scripts.

--- a/mariadb-11.7.yaml
+++ b/mariadb-11.7.yaml
@@ -1,7 +1,7 @@
 package:
   name: mariadb-11.7
   version: "11.7.2"
-  epoch: 2
+  epoch: 3
   description: "The MariaDB open source relational database"
   copyright:
     - license: GPL-3.0-or-later
@@ -206,7 +206,7 @@ subpackages:
           mv "${{targets.destdir}}"/usr/bin/mariadb "${{targets.subpkgdir}}"/usr/bin/
 
   - name: "${{package.name}}-oci-entrypoint"
-    description: Entrypoint for using HAProxy in OCI containers
+    description: Entrypoint for using MariaDB in OCI containers
     dependencies:
       provides:
         - mariadb-oci-entrypoint=${{package.full-version}}
